--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,10 +39,7 @@ export(plotAUC)
 export(plot_annHeatmap2)
 export(plot_enrichment)
 export(plot_feature)
-export(plot_pca_v1)
-export(plot_pca_v2)
-export(plot_pca_v3)
-export(plot_pca_v4)
+export(plot_pca)
 export(plot_sample_correlation_heatmap)
 export(plot_sample_correlation_pheatmap)
 export(plot_umap)
@@ -60,7 +57,6 @@ export(rrollup)
 export(subset_by_size)
 export(xtable2)
 import(Boruta)
-import(ggrepel)
 import(glmnet)
 import(limma)
 import(randomForest)
@@ -85,11 +81,9 @@ importFrom(MSnbase,fData)
 importFrom(MSnbase,featureNames)
 importFrom(MSnbase,pData)
 importFrom(MSnbase,sampleNames)
-importFrom(RColorBrewer,"brewer.pal")
 importFrom(ROCR,performance)
 importFrom(ROCR,prediction)
 importFrom(WGCNA,empiricalBayesLM)
-importFrom(ade4,"dudi.pca")
 importFrom(data.table,rbindlist)
 importFrom(data.table,setDT)
 importFrom(doParallel,registerDoParallel)
@@ -126,6 +120,7 @@ importFrom(foreach,foreach)
 importFrom(genefilter,rowVars)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
+importFrom(ggplot2,arrow)
 importFrom(ggplot2,coord_fixed)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_line)
@@ -139,6 +134,7 @@ importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_raster)
 importFrom(ggplot2,geom_segment)
 importFrom(ggplot2,geom_text)
+importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,guide_colorbar)
@@ -151,6 +147,7 @@ importFrom(ggplot2,scale_fill_gradientn)
 importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,scale_y_discrete)
+importFrom(ggplot2,sec_axis)
 importFrom(ggplot2,stat_ellipse)
 importFrom(ggplot2,sym)
 importFrom(ggplot2,theme)
@@ -172,7 +169,6 @@ importFrom(graphics,frame)
 importFrom(graphics,grid)
 importFrom(graphics,image)
 importFrom(graphics,layout)
-importFrom(graphics,legend)
 importFrom(graphics,lines)
 importFrom(graphics,matlines)
 importFrom(graphics,matplot)
@@ -181,7 +177,6 @@ importFrom(graphics,mtext)
 importFrom(graphics,par)
 importFrom(graphics,points)
 importFrom(graphics,rect)
-importFrom(graphics,text)
 importFrom(graphics,title)
 importFrom(grid,unit)
 importFrom(gtools,combinations)
@@ -198,7 +193,6 @@ importFrom(parallel,detectCores)
 importFrom(parallel,makeCluster)
 importFrom(parallel,mclapply)
 importFrom(parallel,stopCluster)
-importFrom(pcaMethods,pca)
 importFrom(pheatmap,pheatmap)
 importFrom(plyr,ddply)
 importFrom(purrr,map)
@@ -266,7 +260,6 @@ importFrom(stringr,str_length)
 importFrom(stringr,str_locate_all)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_sub)
-importFrom(stringr,str_wrap)
 importFrom(sva,ComBat)
 importFrom(tibble,rownames_to_column)
 importFrom(tidyr,gather)
