Update DESCRIPTION and NAMESPACE
Title-case the title. Alphabetize imports and suggests. Move ~10 packages to suggests and remove packages that weren't actually used like ade4 and made4. Imports now down to around 45 packages. Some are only used for 1 or 2 functions. Need to look into alternatives in other packages from suggests.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: MSnSet.utils
 Type: Package
-Title: Miscellaneous functions for proteomics data analysis
+Title: Miscellaneous Functions for Proteomics Data Analysis
 Version: 0.1
 Date: 2015-03-24
 Encoding: UTF-8
@@ -17,74 +17,69 @@ Depends:
     R (>= 2.10),
     MSnbase
 Imports:
-    parallel,
-    Biostrings,
-    Boruta,
-    ROCR,
-    doParallel,
-    BiocParallel,
-    plyr,
-    dplyr,
-    gplots,
-    foreach,
-    glmnet,
-    iterators,
-    outliers,
-    randomForest,
-    varSelRF,
     Biobase,
-    Heatplus,
-    ade4,
-    made4,
-    ggplot2,
-    xtable,
-    clusterProfiler,
-    stringr,
-    FField,
-    sva,
-    lme4,
-    e1071,
-    UniProt.ws,
-    org.Hs.eg.db,
-    biomaRt,
-    GOstats,
-    ReactomePA,
-    WGCNA,
-    gelnet,
-    multcomp,
+    BiocParallel,
+    Biostrings,
     bnlearn,
-    pracma,
-    umap, 
-    Matrix, 
-    RColorBrewer, 
+    Boruta,
     data.table, 
+    doParallel,
+    DOSE,
+    dplyr,
+    FField,
+    foreach,
+    genefilter,
+    ggplot2,
     ggrepel, 
+    glmnet,
+    gplots,
     gtools, 
+    Heatplus,
+    invgamma,
+    iterators,
     limma,
-    magrittr, 
+    lme4,
+    Matrix, 
+    multcomp,
+    outliers,
+    parallel,
+    pheatmap,
     purrr, 
     qvalue, 
+    randomForest,
+    RColorBrewer, 
     reshape2, 
     rlang,
-    scales, 
+    ROCR,
+    scales,
+    stats,
+    statmod,
+    stringr,
+    sva,
     tibble, 
     tidyr, 
     tidyselect,
-    pheatmap,
+    umap, 
     utils,
-    DOSE,
-    genefilter,
-    invgamma,
-    statmod
+    varSelRF,
+    WGCNA,
+    xtable
 Suggests:
-    knitr,
-    rmarkdown,
-    ggforce,
-    rvest,
+    BiocStyle,
+    biomaRt,
+    clusterProfiler,
+    e1071,
     enrichplot,
+    ggforce,
     ggnewscale,
+    GOstats,
+    knitr,
+    org.Hs.eg.db,
     qpdf,
-    BiocStyle
+    ReactomePA,
+    rmarkdown,
+    rvest,
+    UniProt.ws
 Remotes: cran/heatmap.plus
 VignetteBuilder: knitr
 RoxygenNote: 7.1.2
