Squashed commit of the following:
commit 723b19e93fb4e86bd36da011f53f3e22bdafe847
Merge: d29255d 6304144
Author: Vlad Petyuk <petyuk@gmail.com>
Date:   Fri Dec 24 10:06:04 2021 -0800

    Merge pull request #22 from CamiloPosso/master

    Changed `cluster` parameter to NULL instead of `clust`.

commit 6304144f6c07fa309a208e1d157b7b0b37a2103c
Merge: 4638ba5 d29255d
Author: CamiloPosso <camilo.posso@pnnl.gov>
Date:   Fri Dec 24 09:35:57 2021 -0800

    Merge branch 'master' of https://github.com/CamiloPosso/MSnSet.utils

commit 4638ba5bcba45ff41888b8ab24445f8a1874c4ef
Author: CamiloPosso <camilo.posso@pnnl.gov>
Date:   Fri Dec 24 09:35:18 2021 -0800

    Changed default cluster value to NULL

    Was causing an error since object 'clust' did not exist.

commit d29255d01b2cc23070efb3a857e90ecc08aece51
Merge: d73eff5 ab0e24e
Author: Vlad Petyuk <petyuk@gmail.com>
Date:   Thu Dec 23 16:46:06 2021 -0800

    Merge pull request #19 from CamiloPosso/master

    Added multicore option for empirical adjustments in ComBat.NA.

commit d73eff5ff160db541e78c7642c30468bb3da1ca8
Merge: 011aff7 7585df6
Author: Vlad Petyuk <petyuk@gmail.com>
Date:   Fri Dec 17 13:52:06 2021 -0800

    Merge pull request #21 from PNNL-Comp-Mass-Spec/improve/update_existing

    Add plot_pca

commit 011aff713ce6513b73934d8ee6ce64b778cef278
Merge: 7fcde74 599fd56
Author: Vlad Petyuk <petyuk@gmail.com>
Date:   Tue Dec 14 19:56:49 2021 -0800

    Merge pull request #20 from PNNL-Comp-Mass-Spec/improve/update_existing

    Update limma_contrasts and plot_pca_v2

commit ab0e24eaf3d001f5ac63538d55c5660cce3f2d2d
Merge: c779a4c 7fcde74
Author: CamiloPosso <82610716+CamiloPosso@users.noreply.github.com>
Date:   Mon Nov 22 09:40:22 2021 -0800

    Merge branch 'PNNL-Comp-Mass-Spec:master' into master

commit c779a4c7e85a29246e94210bb1c36fac870468af
Author: CamiloPosso <camilo.posso@pnnl.gov>
Date:   Mon Nov 22 09:09:06 2021 -0800

    Updated description for multicore

commit 1330448feedc7dfb4b8c2590cb28fa72f23

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -181,6 +181,7 @@ importFrom(limma,topTable)
 importFrom(lme4,lmer)
 importFrom(outliers,grubbs.test)
 importFrom(outliers,outlier)
+importFrom(parallel,clusterApply)
 importFrom(parallel,detectCores)
 importFrom(parallel,makeCluster)
 importFrom(parallel,mclapply)
