--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,7 +34,7 @@ export(normalizeByGlob)
 export(normalizeByRef)
 export(normalize_by_feature_property)
 export(normalize_by_feature_property_partitioned)
-export(pairwise_contrasts)
+export(paircomp)
 export(plotAUC)
 export(plot_annHeatmap2)
 export(plot_feature)
@@ -106,6 +106,7 @@ importFrom(dplyr,inner_join)
 importFrom(dplyr,left_join)
 importFrom(dplyr,matches)
 importFrom(dplyr,mutate)
+importFrom(dplyr,one_of)
 importFrom(dplyr,order_by)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
@@ -120,7 +121,6 @@ importFrom(dplyr,sym)
 importFrom(dplyr,ungroup)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
-importFrom(genefilter,rowVars)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,element_blank)
@@ -172,7 +172,6 @@ importFrom(graphics,points)
 importFrom(graphics,rect)
 importFrom(graphics,title)
 importFrom(grid,unit)
-importFrom(gtools,combinations)
 importFrom(invgamma,dinvgamma)
 importFrom(iterators,icount)
 importFrom(limma,eBayes)
@@ -182,6 +181,7 @@ importFrom(lme4,lmer)
 importFrom(outliers,grubbs.test)
 importFrom(outliers,outlier)
 importFrom(parallel,clusterApply)
+importFrom(parallel,clusterExport)
 importFrom(parallel,detectCores)
 importFrom(parallel,makeCluster)
 importFrom(parallel,mclapply)
@@ -255,7 +255,6 @@ importFrom(sva,ComBat)
 importFrom(tibble,rownames_to_column)
 importFrom(tidyr,gather)
 importFrom(tidyr,pivot_wider)
-importFrom(tidyselect,one_of)
 importFrom(umap,umap)
 importFrom(umap,umap.defaults)
 importFrom(utils,flush.console)
