--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,6 +20,8 @@ Imports:
     Biobase,
     BiocParallel,
     Boruta,
+    ComplexHeatmap,
+    circlize,
     data.table, 
     doParallel,
     DOSE,
@@ -38,7 +40,6 @@ Imports:
     Matrix, 
     outliers,
     parallel,
-    pheatmap,
     purrr, 
     qvalue, 
     randomForest,
