--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(ComBat.NA)
 export(blue.colors)
+export(complex_heatmap)
 export(concatenate_by_features)
 export(correct_batch_effect)
 export(correct_batch_effect_NA)
@@ -39,8 +40,6 @@ export(plotAUC)
 export(plot_annHeatmap2)
 export(plot_feature)
 export(plot_pca)
-export(plot_sample_correlation_heatmap)
-export(plot_sample_correlation_pheatmap)
 export(plot_umap)
 export(plot_volcano)
 export(protein_inference)
@@ -54,7 +53,9 @@ export(rf_modeling)
 export(rollup_using_representative)
 export(rrollup)
 export(subset_by_size)
+export(update_args)
 export(xtable2)
+import(ComplexHeatmap)
 import(ggplot2)
 import(glmnet)
 import(limma)
@@ -85,6 +86,7 @@ importFrom(MSnbase,sampleNames)
 importFrom(ROCR,performance)
 importFrom(ROCR,prediction)
 importFrom(WGCNA,empiricalBayesLM)
+importFrom(circlize,colorRamp2)
 importFrom(data.table,rbindlist)
 importFrom(data.table,setDT)
 importFrom(doParallel,registerDoParallel)
@@ -153,8 +155,14 @@ importFrom(ggplot2,ylim)
 importFrom(ggrepel,geom_label_repel)
 importFrom(gplots,bluered)
 importFrom(gplots,heatmap.2)
+importFrom(grDevices,bmp)
 importFrom(grDevices,colorRampPalette)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,jpeg)
+importFrom(grDevices,pdf)
+importFrom(grDevices,png)
 importFrom(grDevices,rgb)
+importFrom(grDevices,tiff)
 importFrom(graphics,abline)
 importFrom(graphics,axis)
 importFrom(graphics,barplot)
@@ -186,7 +194,6 @@ importFrom(parallel,detectCores)
 importFrom(parallel,makeCluster)
 importFrom(parallel,mclapply)
 importFrom(parallel,stopCluster)
-importFrom(pheatmap,pheatmap)
 importFrom(purrr,map)
 importFrom(purrr,map2)
 importFrom(purrr,map_chr)
@@ -203,6 +210,7 @@ importFrom(scales,log_breaks)
 importFrom(scales,pretty_breaks)
 importFrom(scales,rescale)
 importFrom(scales,trans_new)
+importFrom(scales,viridis_pal)
 importFrom(stats,anova)
 importFrom(stats,as.dendrogram)
 importFrom(stats,as.dist)
@@ -219,7 +227,6 @@ importFrom(stats,dnorm)
 importFrom(stats,fisher.test)
 importFrom(stats,glm)
 importFrom(stats,hclust)
-importFrom(stats,heatmap)
 importFrom(stats,lm)
 importFrom(stats,loess)
 importFrom(stats,loess.control)
@@ -243,6 +250,7 @@ importFrom(stats,quantile)
 importFrom(stats,reorder)
 importFrom(stats,rnorm)
 importFrom(stats,sd)
+importFrom(stats,setNames)
 importFrom(stats,smooth.spline)
 importFrom(stats,terms)
 importFrom(stats,var)
