Remove update_args
Replace update_args with utils::modifyList. I did not realize this function already exists, and update_args was running into errors when trying to modify aes.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,7 +53,6 @@ export(rf_modeling)
 export(rollup_using_representative)
 export(rrollup)
 export(subset_by_size)
-export(update_args)
 export(xtable2)
 import(ComplexHeatmap)
 import(ggplot2)
@@ -267,6 +266,7 @@ importFrom(umap,umap)
 importFrom(umap,umap.defaults)
 importFrom(utils,flush.console)
 importFrom(utils,head)
+importFrom(utils,modifyList)
 importFrom(utils,read.csv)
 importFrom(utils,read.delim)
 importFrom(utils,setTxtProgressBar)
