--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(plot_annHeatmap2)
 export(plot_feature)
 export(plot_pca)
 export(plot_umap)
+export(plot_upset)
 export(plot_volcano)
 export(protein_inference)
 export(readMaxQuantPeptides)
@@ -57,6 +58,7 @@ export(xtable2)
 import(ComplexHeatmap)
 import(ggplot2)
 import(glmnet)
+import(grid)
 import(limma)
 import(statmod)
 importClassesFrom(Matrix,dgCMatrix)
@@ -98,7 +100,6 @@ importFrom(dplyr,case_when)
 importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
 importFrom(dplyr,do)
-importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,full_join)
 importFrom(dplyr,group_by)
