Updating title in pecora_plot
Also adding a needed import from dplyr.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -116,6 +116,7 @@ importFrom(dplyr,inner_join)
 importFrom(dplyr,left_join)
 importFrom(dplyr,matches)
 importFrom(dplyr,mutate)
+importFrom(dplyr,n)
 importFrom(dplyr,one_of)
 importFrom(dplyr,order_by)
 importFrom(dplyr,pull)
