adding first draft of peptide_significance_map

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(normalizeByRef)
 export(normalize_by_feature_property)
 export(normalize_by_feature_property_partitioned)
 export(paircomp)
+export(peptide_significance_map)
 export(plotAUC)
 export(plot_annHeatmap2)
 export(plot_feature)
@@ -99,6 +100,7 @@ importFrom(dplyr,arrange_at)
 importFrom(dplyr,case_when)
 importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
+importFrom(dplyr,distinct_at)
 importFrom(dplyr,do)
 importFrom(dplyr,filter)
 importFrom(dplyr,full_join)
@@ -115,6 +117,7 @@ importFrom(dplyr,rename)
 importFrom(dplyr,row_number)
 importFrom(dplyr,select)
 importFrom(dplyr,semi_join)
+importFrom(dplyr,slice)
 importFrom(dplyr,slice_max)
 importFrom(dplyr,slice_min)
 importFrom(dplyr,summarise)
@@ -134,19 +137,24 @@ importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_raster)
+importFrom(ggplot2,geom_rect)
 importFrom(ggplot2,geom_segment)
 importFrom(ggplot2,geom_text)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_fill_gradient)
 importFrom(ggplot2,scale_fill_gradient2)
 importFrom(ggplot2,scale_fill_gradientn)
+importFrom(ggplot2,scale_fill_manual)
+importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,sec_axis)
 importFrom(ggplot2,stat_ellipse)
 importFrom(ggplot2,sym)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
+importFrom(ggplot2,theme_classic)
 importFrom(ggplot2,vars)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,xlim)
