adding scientific_format import

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -217,6 +217,7 @@ importFrom(scales,alpha)
 importFrom(scales,log_breaks)
 importFrom(scales,pretty_breaks)
 importFrom(scales,rescale)
+importFrom(scales,scientific_format)
 importFrom(scales,trans_new)
 importFrom(scales,viridis_pal)
 importFrom(stats,anova)
