bugfix in protein selection

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -213,6 +213,7 @@ importFrom(reshape2,melt)
 importFrom(rlang,"!!")
 importFrom(rlang,":=")
 importFrom(rlang,parse_expr)
+importFrom(rlang,sym)
 importFrom(scales,alpha)
 importFrom(scales,log_breaks)
 importFrom(scales,pretty_breaks)
