adding reading of peptide spectral counts from MaxQuant outputs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ export(plot_umap)
 export(plot_upset)
 export(plot_volcano)
 export(protein_inference)
+export(readMaxQuantPeptideCounts)
 export(readMaxQuantPeptides)
 export(readMaxQuantProtGroups)
 export(readMaxQuantSummary)
