adding peptide_significance_map with example

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,7 @@ export(rollup_using_representative)
 export(rrollup)
 export(subset_by_size)
 export(xtable2)
+exportMethods(map_peptide_position)
 import(ComplexHeatmap)
 import(ggplot2)
 import(glmnet)
@@ -73,6 +74,7 @@ importFrom(Biobase,rowMax)
 importFrom(Biobase,rowMin)
 importFrom(Biobase,sampleNames)
 importFrom(BiocParallel,bpparam)
+importFrom(Biostrings,readAAStringSet)
 importFrom(Boruta,Boruta)
 importFrom(Boruta,getSelectedAttributes)
 importFrom(DOSE,geneInCategory)
@@ -80,6 +82,8 @@ importFrom(FField,FFieldPtRep)
 importFrom(Heatplus,RainbowPastel)
 importFrom(Heatplus,convAnnData)
 importFrom(Heatplus,doLegend)
+importFrom(MSnID,MSnID)
+importFrom(MSnID,`psms<-`)
 importFrom(MSnbase,MSnSet)
 importFrom(MSnbase,exprs)
 importFrom(MSnbase,fData)
@@ -287,4 +291,5 @@ importFrom(utils,write.table)
 importFrom(varSelRF,varSelRF)
 importFrom(xtable,print.xtable)
 importFrom(xtable,xtable)
+importMethodsFrom(MSnID,map_peptide_position)
 importMethodsFrom(MSnbase,"featureNames<-")
