--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: MSnSet.utils
 Type: Package
 Title: Miscellaneous Functions for Proteomics Data Analysis
-Version: 0.1
+Version: 0.1.0
 Date: 2021-12-28
 Encoding: UTF-8
 Author: Vladislav Petyuk
@@ -59,7 +59,8 @@ Imports:
     WGCNA,
     xtable,
     heatmap.plus,
-    FField
+    FField,
+    MSnID
 Suggests:
     BiocStyle,
     biomaRt,
@@ -80,5 +81,6 @@ Suggests:
 Remotes: 
     github::cran/heatmap.plus, 
     github::cran/FField
+    github::PNNL-Comp-Mass-Spec/MSnID
 VignetteBuilder: knitr
 RoxygenNote: 7.2.3
