--- a/NAMESPACE
+++ b/NAMESPACE
@@ -84,7 +84,9 @@ importFrom(Heatplus,convAnnData)
 importFrom(Heatplus,doLegend)
 importFrom(MSnID,MSnID)
 importFrom(MSnID,`psms<-`)
+importFrom(MSnID,psms)
 importFrom(MSnbase,MSnSet)
+importFrom(MSnbase,`fData<-`)
 importFrom(MSnbase,exprs)
 importFrom(MSnbase,fData)
 importFrom(MSnbase,featureNames)
@@ -105,7 +107,6 @@ importFrom(dplyr,arrange_at)
 importFrom(dplyr,case_when)
 importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
-importFrom(dplyr,distinct_at)
 importFrom(dplyr,do)
 importFrom(dplyr,filter)
 importFrom(dplyr,full_join)
@@ -129,6 +130,7 @@ importFrom(dplyr,summarise)
 importFrom(dplyr,summarize)
 importFrom(dplyr,sym)
 importFrom(dplyr,ungroup)
+importFrom(dplyr,vars)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(ggplot2,aes)
@@ -199,6 +201,7 @@ importFrom(limma,eBayes)
 importFrom(limma,lmFit)
 importFrom(limma,topTable)
 importFrom(lme4,lmer)
+importFrom(methods,setMethod)
 importFrom(outliers,grubbs.test)
 importFrom(outliers,outlier)
 importFrom(parallel,clusterApply)
