--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,11 +36,15 @@ export(normalizeByRef)
 export(normalize_by_feature_property)
 export(normalize_by_feature_property_partitioned)
 export(paircomp)
+export(pecora_analysis)
+export(pecora_mod)
+export(pecora_preprocess)
 export(peptide_significance_map)
 export(plotAUC)
 export(plot_annHeatmap2)
 export(plot_feature)
 export(plot_pca)
+export(plot_pecora)
 export(plot_umap)
 export(plot_upset)
 export(plot_volcano)
@@ -95,6 +99,7 @@ importFrom(MSnbase,sampleNames)
 importFrom(ROCR,performance)
 importFrom(ROCR,prediction)
 importFrom(WGCNA,empiricalBayesLM)
+importFrom(car,Anova)
 importFrom(circlize,colorRamp2)
 importFrom(data.table,rbindlist)
 importFrom(data.table,setDT)
@@ -214,6 +219,7 @@ importFrom(parallel,stopCluster)
 importFrom(purrr,map)
 importFrom(purrr,map2)
 importFrom(purrr,map_chr)
+importFrom(purrr,map_dbl)
 importFrom(qvalue,qvalue)
 importFrom(randomForest,importance)
 importFrom(randomForest,randomForest)
@@ -224,6 +230,7 @@ importFrom(rlang,":=")
 importFrom(rlang,parse_expr)
 importFrom(rlang,sym)
 importFrom(scales,alpha)
+importFrom(scales,hue_pal)
 importFrom(scales,log_breaks)
 importFrom(scales,pretty_breaks)
 importFrom(scales,rescale)
@@ -272,6 +279,7 @@ importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(stats,smooth.spline)
 importFrom(stats,terms)
+importFrom(stats,update)
 importFrom(stats,var)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_length)
@@ -279,9 +287,13 @@ importFrom(stringr,str_locate_all)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_sub)
 importFrom(sva,ComBat)
+importFrom(tibble,enframe)
 importFrom(tibble,rownames_to_column)
+importFrom(tidyr,any_of)
 importFrom(tidyr,gather)
+importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
+importFrom(tidyr,unnest)
 importFrom(umap,umap)
 importFrom(umap,umap.defaults)
 importFrom(utils,flush.console)
