About to debug parLapply

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(eset_lm)
 export(eset_presence_absence)
 export(evaluate_parameter_effect)
 export(exhaustive_ratios)
+export(filter_by_occurrence)
 export(heatmap.3)
 export(heatmap.plus.2)
 export(hot.colors)
@@ -26,6 +27,7 @@ export(knn_imputation)
 export(limma_a_b)
 export(limma_contrasts)
 export(limma_gen)
+export(log2_zero_center)
 export(lr_modeling)
 export(lsos)
 export(make.unique.2)
@@ -209,10 +211,12 @@ importFrom(methods,setMethod)
 importFrom(outliers,grubbs.test)
 importFrom(outliers,outlier)
 importFrom(parallel,clusterApply)
+importFrom(parallel,clusterEvalQ)
 importFrom(parallel,clusterExport)
 importFrom(parallel,detectCores)
 importFrom(parallel,makeCluster)
 importFrom(parallel,mclapply)
+importFrom(parallel,parLapply)
 importFrom(parallel,stopCluster)
 importFrom(purrr,map)
 importFrom(purrr,map2)
