added turbo.colors new color scheme

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ export(rf_modeling)
 export(rollup_using_representative)
 export(rrollup)
 export(subset_by_size)
+export(turbo.colors)
 export(xtable2)
 exportMethods(map_peptide_position)
 import(ComplexHeatmap)
