Add missing stats::aggregate import

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -240,6 +240,7 @@ importFrom(scales,rescale)
 importFrom(scales,scientific_format)
 importFrom(scales,trans_new)
 importFrom(scales,viridis_pal)
+importFrom(stats,aggregate)
 importFrom(stats,anova)
 importFrom(stats,as.dendrogram)
 importFrom(stats,as.dist)
