complex_heatmap convert character columns to factors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -138,6 +138,7 @@ importFrom(dplyr,summarize)
 importFrom(dplyr,sym)
 importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
+importFrom(dplyr,where)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(ggplot2,aes)
