adding confidence interval to AUC plot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -212,6 +212,8 @@ importFrom(lme4,lmer)
 importFrom(methods,setMethod)
 importFrom(outliers,grubbs.test)
 importFrom(outliers,outlier)
+importFrom(pROC,ci.se)
+importFrom(pROC,roc)
 importFrom(parallel,clusterApply)
 importFrom(parallel,clusterEvalQ)
 importFrom(parallel,clusterExport)
